# minishell

./: .gitignore  CMakeLists.txt  Makefile  a.out  list.c  main.c  utils_1.c
gnl/: get_next_line.c  get_next_line_utils.c
include/: get_next_line.h  mine.h  shell.h
my folder/: Makefile  cd.c  commans  echo.c  env.c  export.c  main.c  main.d  other_cmd_wslesh.c  pwd.c  unset.c
my folder/commans.dSYM/Contents/: Info.plist
my folder/commans.dSYM/Contents/Resources/DWARF/: commans
my_folder/: Makefile_your  a.out  cd.c  change_value.c  commands.c  delete_sym.c  echo.c  env.c  errors_code.c  exit.c  export.c  export_2.c  gnl_v2.c  hist.c  my_utils.c  other_cmd_wslesh.c  other_cmds.c  other_cmds_2.c  press_keys.c  pwd.c  test.c  unset.c
utils/: ft_split.c  list.c  list.d  list_2.c  utils_1.c  utils_1.d  utils_2.c  utils_2.d  utils_3.c  utils_4.c  utils_5.c
your_not-folder/: CMakeLists.txt  Makefile_my  create_tokens.c  create_tokens_utils.c  hi_pipe.c  main.c  make_redir.c  make_redir_utils.c  parse_shell.c  parse_shell_utils.c  parse_tmp.c  utils_1a.c
your_not-folder/tmp/: CMakeCache.txt
